# candidatesignal

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.ocr  Dockerfile.ui  README.md  docker-compose.gcp.yml  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-train.txt  requirements.txt
docs/: CURRENT_PRODUCT.md  LAUNCH_PROGRESS.md  RUNNING_ISSUES.md
scripts/: backfill_document_metadata.py  backup_postgres.sh  build_sft_dataset.py  check_db_hardening.py  check_production_config.py  evaluate_json.py  launch_readiness.py  lightonocr_wrapper.py  load_smoke.py  migrate_db.py  rebuild_normalized_analytics.py  reconcile_parse_jobs.py  reindex_candidates.py  restore_postgres.sh  run_parse_worker.py  run_retention_policies.py  run_staging_e2e_from_secrets.sh  setup_lightonocr.py  train_qlora.py  validate_db_hardening_constraints.py
tests/: test_alert_delivery.py  test_analytics.py  test_auth_security.py  test_campaign_status.py  test_campaign_summary_read_model.py  test_candidate_facts.py  test_candidate_portal.py  test_candidate_review_signals.py  test_candidate_search.py  test_candidate_summary_read_model.py  test_candidate_upload_worker.py  test_candidate_versions.py  test_collaboration.py  test_copilot_filtering.py  test_copilot_synthesis.py  test_coverage.py  test_db_retention.py  test_db_schema_hardening.py  test_db_tenant_context.py  test_docker_config.py  test_document_preview.py  test_domain_years.py  test_fact_verification.py  test_geo.py  test_golden_resume_regressions.py  test_image_extraction.py  test_launch_readiness.py  (+27 more)
(+180 files in other folders)
