[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-intel"
version = "0.1.0"
description = "Resume PDF/DOCX parser with LLM structured extraction"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "litellm>=1.79",
  "pypdf>=4.2",
  "python-docx>=1.1",
  "pypdfium2>=4.30",
  "Pillow>=10.3",
  "dateparser>=1.2",
  "rich>=13.7",
  "fastapi>=0.124",
  "uvicorn>=0.38",
  "python-multipart>=0.0.20",
  "psycopg[binary]>=3.2",
]

[project.scripts]
resume-intel = "resume_intel.cli:main"
resume-intel-web = "resume_intel.web:main"

[tool.setuptools.packages.find]
where = ["src"]
